done until con-3, left for con-4

--- a/index.html
+++ b/index.html
@@ -37,22 +37,161 @@
                         <img src="./assets/img-1.svg" alt="book-cover">
                     </div>
                     <div class="description">
-                        <div class="desc-item">
-                            <p>Adam Smith</p>
-                            <p>The Wealth of Nations</p>
+                        <div id="desc-item">
+                            <p>adam smith</p>
+                            <p>the wealth of nations</p>
                         </div>
                         <div id="rating">
                             <img src="./assets/rating.svg" alt="rating">
                         </div>
-                        <div class="desc-item"></div>
-                        <div class="desc-item"></div>
+                        <div id="price">
+                            <img src="./assets/discount.svg" alt="price">
+                        </div>
                     </div>
                 </div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card">
+                    <div class="book-cover">
+                        <img src="./assets/img-2.svg" alt="book-cover">
+                    </div>
+                    <div class="description">
+                        <div id="desc-item">
+                            <p>mikhail bulgakov</p>
+                            <p>mater margarita</p>
+                        </div>
+                        <div id="rating">
+                            <img src="./assets/rating.svg" alt="rating">
+                        </div>
+                        <div id="price">
+                            <img src="./assets/discount.svg" alt="price">
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="book-cover">
+                        <img src="./assets/img-3.svg" alt="book-cover">
+                    </div>
+                    <div class="description">
+                        <div id="desc-item">
+                            <p>alex gilvarry</p>
+                            <p>from the memoirs of a non-enemy combatant</p>
+                        </div>
+                        <div id="rating">
+                            <img src="./assets/rating.svg" alt="rating">
+                        </div>
+                        <div id="price">
+                            <img src="./assets/price.svg" alt="price">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="row-2"></div>
-            <div class="row-3"></div>
+
+            <div class="row-2">
+                <div class="card">
+                    <div class="book-cover">
+                        <img src="./assets/img-4.svg" alt="book-cover">
+                    </div>
+                    <div class="description">
+                        <div id="desc-item">
+                            <p>patrick ness</p>
+                            <p>more than this</p>
+                        </div>
+                        <div id="rating">
+                            <img src="./assets/rating.svg" alt="rating">
+                        </div>
+                        <div id="price">
+                            <img src="./assets/price.svg" alt="price">
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="book-cover">
+                        <img src="./assets/img-5.svg" alt="book-cover">
+                    </div>
+                    <div class="description">
+                        <div id="desc-item">
+                            <p>erik spiekermann</p>
+                            <p>hello i am erik</p>
+                        </div>
+                        <div id="rating">
+                            <img src="./assets/rating.svg" alt="rating">
+                        </div>
+                        <div id="price">
+                            <img src="./assets/price.svg" alt="price">
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="book-cover">
+                        <img src="./assets/img-6.svg" alt="book-cover">
+                    </div>
+                    <div class="description">
+                        <div id="desc-item">
+                            <p>mario puzo</p>
+                            <p>the godfather</p>
+                        </div>
+                        <div id="rating">
+                            <img src="./assets/rating.svg" alt="rating">
+                        </div>
+                        <div id="price">
+                            <img src="./assets/discount.svg" alt="price">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row-3">
+                <div class="card">
+                    <div class="book-cover">
+                        <img src="./assets/img-7.svg" alt="book-cover">
+                    </div>
+                    <div class="description">
+                        <div id="desc-item">
+                            <p>don delillo/p>
+                            <p>the names</p>
+                        </div>
+                        <div id="rating">
+                            <img src="./assets/rating.svg" alt="rating">
+                        </div>
+                        <div id="price">
+                            <img src="./assets/price.svg" alt="price">
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="book-cover">
+                        <img src="./assets/img-8.svg" alt="book-cover">
+                    </div>
+                    <div class="description">
+                        <div id="desc-item">
+                            <p>daniel gargallo</p>
+                            <p>she beyond sun</p>
+                        </div>
+                        <div id="rating">
+                            <img src="./assets/rating.svg" alt="rating">
+                        </div>
+                        <div id="price">
+                            <img src="./assets/price.svg" alt="price">
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="book-cover">
+                        <img src="./assets/img-9.svg" alt="book-cover">
+                    </div>
+                    <div class="description">
+                        <div id="desc-item">
+                            <p>alan trotter</p>
+                            <p>muscle</p>
+                        </div>
+                        <div id="rating">
+                            <img src="./assets/rating.svg" alt="rating">
+                        </div>
+                        <div id="price">
+                            <img src="./assets/price-2.svg" alt="price">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="con-4"></div>
     </div>
