complete for desktop view

--- a/index.html
+++ b/index.html
@@ -193,7 +193,28 @@
                 </div>
             </div>
         </div>
-        <div class="con-4"></div>
+        <div class="con-4">
+            <div class="up">
+                <div class="up-1">
+                    <img src="./assets/logo.svg" alt="logo">
+                </div>
+                <div class="up-2">
+                    <img src="./assets/insta.svg" alt="instagram">
+                    <img src="./assets/fb.svg" alt="facebook">
+                    <img src="./assets/twitter.svg" alt="twitter">
+                </div>
+            </div>
+            <div class="down">
+                <div class="down-1">
+                        <p>terms and conditions</p>
+                        <p>privacy policy</p>
+                </div>
+                <div class="down-2">
+                    <p>+44 1332 4122</p>
+                    <p>support@bbockshelf.com</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
