--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
                 <img src="./assets/logo.svg" alt="logo">
             </div>
             <div class="item-2">
-                <p>Books</p>
-                <p>Authors</p>
-                <p>What to Read?</p>
-                <p>Gift Ideas</p>
-                <p>About Us</p>
+                <span>Books</span>
+                <span>Authors</span>
+                <span>What to Read?</span>
+                <span>Gift Ideas</span>
+                <span>About Us</span>
             </div>
             <div class="item-3">
                 <img src="./assets/Right.svg" alt="login-button">
             </div>
         </div>
         <div class="con-2">
-            <p>all books</p>
-            <p>all books</p>
-            <p>all books</p>
-            <p>all books</p>
-            <p>all books</p>
+            <span>all books</span>
+            <span>all books</span>
+            <span>all books</span>
+            <span>all books</span>
+            <span>all books</span>
         </div>
         <div class="con-3">
-            <div class="row-1">
+            <div class="card-container">
                 <div class="card">
                     <div class="book-cover">
                         <img src="./assets/img-1.svg" alt="book-cover">
@@ -83,9 +83,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="row-2">
                 <div class="card">
                     <div class="book-cover">
                         <img src="./assets/img-4.svg" alt="book-cover">
@@ -137,16 +134,13 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="row-3">
                 <div class="card">
                     <div class="book-cover">
                         <img src="./assets/img-7.svg" alt="book-cover">
                     </div>
                     <div class="description">
                         <div id="desc-item">
-                            <p>don delillo/p>
+                            <p>don delillo</p>
                             <p>the names</p>
                         </div>
                         <div id="rating">
