done for desktop view

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
             </div>
             <div class="down">
                 <div class="down-1">
-                        <p>terms and conditions</p>
-                        <p>privacy policy</p>
+                        <p>Terms and conditions</p>
+                        <p>Privacy policy</p>
                 </div>
                 <div class="down-2">
                     <p>+44 1332 4122</p>
